--- a/templates/webapp/webapp.html
+++ b/templates/webapp/webapp.html
@@ -1,7 +1,7 @@
 {% extends "webapp/header.html" %}
 
 {% block content %}
-<div clas="container">
+<div class="container">
     <h1>Welcome to the User Input Test</h1>
     <p>Please tell us your favorite quote:</p>
     <form method="post">
