--- a/templates/webapp/header.html
+++ b/templates/webapp/header.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <title>User Test</title>
-    <meta charset="utf-8" />
-</head>
+    <head>
+        <title>Basic Django WepApp WebSite</title>
+       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    </head>
 
-<body class="body" style="background-color:#cecece">
-    <div>
-            <div clas="container">
+    <body class="body" style="background-color:#eee">
+        <div>
+            <div class="container">
                 <nav class="navbar navbar-default">
                     <ul class="header">
-                        <li><a href='/home'>Home</a></li>
-                        <li><a href='/webapp'>WebAppForm</a></li>
-                        <li><a href='/accounts'>Login</a></li>
+                        <a class="btn btn-success" href="/home" role="button"><span class="glyphicon glyphicon-leaf" aria-hidden="true"></span> Home</a>
+                        <a class="btn btn-info" href="/webapp" role="button"><span class="glyphicon glyphicon-knight" aria-hidden="true"></span> WebApp Form</a>
+                        <a class="btn btn-primary" href="/accounts" role="button"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> Login</a>
+                        <a class="btn btn-danger" href="#" role="button"><span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span> Log Out</a>
                     </ul>
                 </nav>
             </div>
         {% block content %}
         {% endblock %}
-    </div>
-</body>
+        </div>
+    </body>
 
 </html>
