--- a/templates/webapp/header.html
+++ b/templates/webapp/header.html
@@ -12,7 +12,7 @@
                 <nav class="navbar navbar-default">
                     <ul class="header">
                         <a class="btn btn-success" href="/home" role="button"><span class="glyphicon glyphicon-leaf" aria-hidden="true"></span> Home</a>
-                        <a class="btn btn-info" href="/webapp" role="button"><span class="glyphicon glyphicon-knight" aria-hidden="true"></span> WebApp Form</a>
+                        <a class="btn btn-info" href="/webapp" role="button"><span class="glyphicon glyphicon-knight" aria-hidden="true"></span> Quotes</a>
                         <a class="btn btn-primary" href="/accounts" role="button"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> Login</a>
                         <a class="btn btn-danger" href="#" role="button"><span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span> Log Out</a>
                     </ul>
