--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,4 +1,8 @@
-{% extends "webapp/header.html" %}
+{% extends "header.html" %}
+
+{% block head %}
+<title>Login</title>
+{% endblock %}
 
 {% block content %}
 <div class ="container">
