--- a/templates/header.html
+++ b/templates/header.html
@@ -2,8 +2,10 @@
 <html lang="en">
 
     <head>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        {% block head %}
         <title>Basic Django WepApp WebSite</title>
-       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        {% endblock %}
     </head>
 
     <body class="body" style="background-color:#eee">
@@ -13,7 +15,7 @@
                     <ul class="header">
                         <a class="btn btn-success" href="/home" role="button"><span class="glyphicon glyphicon-leaf" aria-hidden="true"></span> Home</a>
                         <a class="btn btn-info" href="/webapp" role="button"><span class="glyphicon glyphicon-knight" aria-hidden="true"></span> Quotes</a>
-                        <a class="btn btn-primary" href="/accounts" role="button"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> Login</a>
+                        <a class="btn btn-primary" href="/accounts/login" role="button"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> Login</a>
                         <a class="btn btn-danger" href="#" role="button"><span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span> Log Out</a>
                     </ul>
                 </nav>
@@ -22,5 +24,10 @@
         {% endblock %}
         </div>
     </body>
-
+    <script
+        src="http://code.jquery.com/jquery-3.1.1.min.js"
+        integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" 
+        crossorigin="anonymous"></script>
+    <script 
+        src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </html>
