--- a/templates/webapp/webapp.html
+++ b/templates/webapp/webapp.html
@@ -1,4 +1,8 @@
-{% extends "webapp/header.html" %}
+{% extends "header.html" %}
+
+{% block head %}
+<title>Quote Application</title>
+{% endblock %}
 
 {% block content %}
 <div class="container">
