--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -6,11 +6,16 @@
 
 {% block content %}
 <div class ="container">
-    <p>Please log in here: </p>
+    <h2>Please log in here: </h2>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Login</button>
+        <div class="checkbox">
+            <label>
+              <input type="checkbox"> Remember me
+            </label>
+          </div>
+        <button type="submit", class="btn btn-outline-dark">Login</button>
     </form>
 </div>
 {% endblock %}
