--- a/templates/header.html
+++ b/templates/header.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
     <head>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         {% block head %}
         <title>Basic Django WepApp WebSite</title>
         {% endblock %}
@@ -11,23 +11,28 @@
     <body class="body" style="background-color:#eee">
         <div>
             <div class="container">
-                <nav class="navbar navbar-default">
+                <ul class="navbar navbar-default">
+                {% if user.is_authenticated %}
                     <ul class="header">
-                        <a class="btn btn-success" href="/home" role="button"><span class="glyphicon glyphicon-leaf" aria-hidden="true"></span> Home</a>
-                        <a class="btn btn-info" href="/webapp" role="button"><span class="glyphicon glyphicon-knight" aria-hidden="true"></span> Quotes</a>
-                        <a class="btn btn-primary" href="/accounts/login" role="button"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> Login</a>
-                        <a class="btn btn-danger" href="#" role="button"><span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span> Log Out</a>
+                        <a class="btn btn-success" href="/home" role="button">Home</a>
+                        <a class="btn btn-info" href="/webapp" role="button">Quotes</a>
                     </ul>
-                </nav>
+                {% else %}
+                <ul class="navbar navbar-default">
+                    <ul class="header">
+                        <a class="btn btn-success" href="/home" role="button">Home</a>
+                    </ul>
+                </ul>
+                {% endif %}
+                <ul class="navbar navbar-right">
+                    <ul>
+                        <a class="btn btn-primary" href="/accounts/login" role="button">Login</a>
+                        <a class="btn btn-danger" href="/accounts/logout" role="button">Log Out</a>
+                        <a class="btn btn-warning" href="/accounts/register" role="button">Register</a>
+                    </ul>
+                </ul>
             </div>
         {% block content %}
         {% endblock %}
         </div>
     </body>
-    <script
-        src="http://code.jquery.com/jquery-3.1.1.min.js"
-        integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" 
-        crossorigin="anonymous"></script>
-    <script 
-        src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-</html>
