--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -11,9 +11,9 @@
             <ul>Profile access</ul>
             <ul>Changing passwords</ul>
             <ul>Changing emails</ul>
-            <ul>Connecting quote to user</ul>
+            <ul>Connecting quote to user <img src="{% static "images/check_mark.jpg" %}" style="width:20px;height:20px;"></img></ul>
             <ul>.ect</ul>
-        </div></p>
+            </div></p>
     {% else %}
     <h2>You are not logged in, please login.</h2>
     {% endif %}
