--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -11,7 +11,7 @@
             <ul>Profile access</ul>
             <ul>Changing passwords</ul>
             <ul>Changing emails</ul>
-            <ul>Connecting quote to user <img src="{% static "images/check_mark.jpg" %}" style="width:20px;height:20px;"></img></ul>
+            <ul><strike>Connecting quote to user</strike></ul>
             <ul>.ect</ul>
             </div></p>
     {% else %}
