--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -3,9 +3,12 @@
 {% block content %}
 <div class="container">
     {% if user.is_authenticated %}
-    <h2>Welcome to the home page {{ user.username }}.</h2>
-    <p>Here you will have access to both login in and interacting with a Web Form. </p>
-    <p>The Web Form will take your favorite quote and keep track of it while also allowing others to enter their own.</p>
+    <div class="alert alert-success" role="alert">
+        <h4 class="alert-heading">Well done {{ user.username }}!</h4>
+        <br>
+        <p>Here you will have access to both login in and interacting with the Quote Machine. </p>
+        <p>The Quote Machine will take your favorite quote and keep track of it while also allowing others to enter their own.</p>
+    </div>
         <p><div class="alert alert-light" role="alert">
             <h4>Things to do...</h4>
             <ul>Profile access</ul>
